--- a/src/content/magic-bio/quick-start.mdx
+++ b/src/content/magic-bio/quick-start.mdx
@@ -15,7 +15,7 @@ Magic Bio is a comprehensive, MDX-based, SEO-friendly, responsive documentation 
 
 ## License
 
-Magic Bio is licensed under a custom license that can be found in the project's `LICENSE.md` file. The license allows for personal, internal or external and commercial use, but prohibits distribution of the source code, redistribution, or monetization of the source code in any way.
+Magic Bio is licensed under the [Dopler CC license](https://once-ui.com/products/magic-bio). The license allows for personal, internal or external and commercial use, but prohibits distribution of the source code, redistribution, or monetization of the source code in any way.
 
 ## Quick start
 
