--- a/src/content/magic-bio/quick-start.mdx
+++ b/src/content/magic-bio/quick-start.mdx
@@ -7,7 +7,7 @@ navLabel: "Quick start"
 navIcon: "learn"
 ---
 
-<Feedback icon vertical="center" description={<>Once UI Pro is required to use Magic Bio. <SmartLink href="https://once-ui.com/pro">Subscribe</SmartLink> to gain access to the GitHub repository.</>}/>
+<Feedback icon vertical="center" description={<>Magic Bio is now free! You can use it for personal projects without attribution.</>}/>
 
 ## About
 
@@ -15,7 +15,9 @@ Magic Bio is a comprehensive, MDX-based, SEO-friendly, responsive documentation 
 
 ## License
 
-Magic Bio is licensed under the [Dopler CC license](https://once-ui.com/products/magic-bio). The license allows for personal, internal or external and commercial use, but prohibits distribution of the source code, redistribution, or monetization of the source code in any way.
+Magic Bio is licensed under the [CC BY-NC 4.0](https://creativecommons.org/licenses/by-nc/4.0/). You can only use it for personal purposes, and you must attribute the original work. The attribution is added in the footer by default, but you can place it in any other, visible part of your site.
+
+Subscribe to the [Once UI Pro plan](https://once-ui.com/pricing) to extend the license to [Dopler CC](https://once-ui.com/products/magic-bio).
 
 ## Quick start
 
